--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "@vuepic/vue-datepicker": "^5.1.2",
     "axios": "^1.4.0",
     "core-js": "^3.29.0",
